# flask-mvc2

./: .gitignore  README.md  index.html  makefile  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
flask_mvc/: cli.py  command.py  flask_mvc.py
flask_mvc/command/controller/: generator.py
flask_mvc/core/: exceptions.py
flask_mvc/middlewares/: base_model.py  blueprint_binding.py  blueprint_middleware.py  callback.py  html_input_method_helper.py  namespace.py  router.py  router_middleware.py
quickstart/: index.html
search/: search_index.json
site/: 404.html
site/controllers/: index.html
site/router/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: conftest.py  test_callbacks_functional.py  test_helpers_functional.py  test_integration_functional.py  test_router_functional.py  test_version_functional.py
tests/app/: __init__.py
tests/app/models/: message.py
tests/unit/: test_generators.py  test_name_utils.py
views/: index.html
