[project]
name = "flask-mvc2"
version = "0.3.0"
description = "Transform Flask into a structured MVC architecture with powerful CLI tools"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "Marcus Pereira", email = "oi@marcuspereira.dev.br" }]
maintainers = [{ name = "Marcus Pereira", email = "oi@marcuspereira.dev.br" }]
keywords = [
    "flask",
    "mvc",
    "web-framework",
    "cli",
    "generator",
    "architecture",
    "flask-extension",
    "scaffold",
    "crud",
    "rest-api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.0.0,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "Jinja2>=3.1.0,<4.0.0",
    "method-override>=0.3.0,<0.4.0",
]

[project.urls]
Homepage = "https://github.com/marcuxyz/flask-mvc"
Repository = "https://github.com/marcuxyz/flask-mvc"
Documentation = "https://marcuxyz.github.io/flask-mvc"

[project.scripts]
flask-mvc = "flask_mvc.cli:main"

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "flask-sqlalchemy>=3.0.5,<4.0.0",

    # Code Quality
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.4.0,<4.0.0",

    # Documentation
    "mkdocs-material>=9.4.8,<10.0.0",
    "mkdocs-mermaid2-plugin>=1.1.1,<2.0.0",

    # Testing Tools
    "splinter[flask]>=0.19.0,<0.20.0",
    "urllib3>=1.26.18,<2.0.0",

    # Development Tools
    "ipython>=8.15.0,<9.0.0",
    "rich>=13.5.0,<14.0.0",
    "bandit>=1.8.6,<2.0.0",
    "black>=25.1.0,<26.0.0",
]
docs = [
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocs-material>=9.4.8,<10.0.0",
    "mkdocs-mermaid2-plugin>=1.1.1,<2.0.0",
    "markdown-include>=0.8.1,<0.9.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "flask_mvc/**/*",
    "CHANGELOG.md",
    "LICENSE",
]
exclude = [
    "tests/**/*",
    "docs/**/*",
    "site/**/*",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["flask_mvc"]

[tool.uv]
default-groups = ["dev"]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | site
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["flask_mvc"]
known_third_party = ["flask", "click", "jinja2"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=flask_mvc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["flask_mvc"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 10
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.9.0"
tag_format = "v$version"
version_files = [
    "flask_mvc/__version__.py",
    "pyproject.toml:project.version"
]
